<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main1Fragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_navigation_menu1" />
    <item
        android:id="@+id/main2Fragment"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_navigation_menu2" />
    <item
        android:id="@+id/main3Fragment"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/title_navigation_menu3" />
    <item
        android:id="@+id/main4Fragment"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/title_navigation_menu4" />
    <item
        android:id="@+id/main5Fragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_navigation_menu5"
        />

</menu>